[tool.poetry]
name = "final-project-dta"
version = "0.1.0"
description = "Data Tech Analytics final project virtual poetry environment."
authors = ["agrawasu <agrawasu@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
jupyterlab = "4.0.5"
ipykernel = "6.23.0"
black = "23.3.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
